@@ -13,6 +13,7 @@ environments.
 * Adjusted stat.sh script.
 * Updated setup.py.
 * Updated date in LICENSE.
+* Updated vars in example 1.
 
 2006.01.29
 
